# StandardSPA

./: .gitignore  README.md  pyproject.toml
app/scheduler/: __init__.py
app/utilities/: sys_print.py
app/websockets/: __init__.py  authenticate.py  connection_handler.py  helpers.py  server.py
app/websockets/actions/: __init__.py  connection.py  echo.py  print_connections.py  toast.py  toast_broadcast.py
app/wsgi/: __init__.py  config.py
app/wsgi/api/: __init__.py
app/wsgi/api/routes/: index.py
app/wsgi/models/: system_user.py
app/wsgi/resources/cli/: cli.py
app/wsgi/testing/: __init__.py
app/wsgi/testing/templates/testing/: index.html
app/wsgi/testing/templates/testing/extends/: main.html
app/wsgi/testing/templates/testing/includes/: header.html
app/wsgi/vite/frontend/: index-CzU3NgV6.css  index-D18VGdMr.js
frontend/: package-lock.json  vite.config.js
frontend/src/backend/: BackendContext.jsx  WebsocketContext.jsx
frontend/src/css/: buttons.css  typography.css
frontend/src/pages/Index/: Index.jsx
frontend/src/pages/Websocket/: Websocket.jsx
src/: websocket_consumer.py
src/app/scheduler/: __init__.py
src/app/wsgi/extensions/: __init__.py
src/app/wsgi/models/: system_log.py
src/app/wsgi/resources/error_handlers/: error_handlers.py
src/app/wsgi/resources/routes/: routes.py
src/app/wsgi/testing/routes/: index.py
src/frontend/: package.json  tailwind.config.js
src/frontend/src/: Router.jsx  index.html
src/frontend/src/context/: MainContext.jsx
src/frontend/src/css/: __main__.css  structure.css
